--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <link rel="stylesheet" href="./dist/css/main.css">
 </head>
 <body>
+
+    <section class="hero">
+        <div class="hero__content">
+            <h1 class="hero__content__branding">
+                <img src="./dist/img/disneyplus.svg" alt="Disney+">
+            </h1>
+
+            <h3 class="title--small">As melhores histórias em um só lugar.</h3>
+
+            <p>
+                <a href="#" class="link--text">Assinar somente o Disney+</a>
+                <br>
+                <span class="text">R$ 27,90/mes o 279,90/ano a vista*</span>
+            </p>
+        </div>
+
+    </section>
     
 </body>
 </html>
